Implemented backend to delete a pinned message
